--- a/Mstyle.css
+++ b/Mstyle.css
@@ -10,6 +10,19 @@ body
     font-family: consolas;
 }
 
+p{
+    border: solid 3px #2196f3;
+    padding: 20px;
+    margin: 0;
+    min-height: 10vh;
+    color: #2196f3;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: auto;
+    font-size: 24px;
+}
+
+
 input
 {
     font-family: consolas;
